CXDEVII-1810: Fix for IE9 where the pdf icon wouldn't align to the right

--- a/aegon-sass-library/components/_table_sort_filter.scss
+++ b/aegon-sass-library/components/_table_sort_filter.scss
@@ -123,7 +123,7 @@
             height: 32px;
             width: 32px;
             top: -34px;
-            left: initial;
+            left: auto;
             float: right;
             right: 15px;
             position: absolute;
